tests/cli/apply/snapshots/main__cli__apply__redo__should_redo_migration_with_success.snap
---
source: tests/cli/apply/redo.rs
expression: stdout
---
Executing migration AddPost...
Migration successfully re-executed!
